resolved a layout bug in Firefox

--- a/_scss/grid.scss
+++ b/_scss/grid.scss
@@ -6,8 +6,9 @@ $perspective: 200px;
 $rotation: 70deg;
 
 #overflow-wrapper {
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100%;
+  height: 100%;
   position: relative;
 }
 
